--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,6 @@
+body{
+  counter-reset: section;
+}
 
 .btn.btn-primary{
   background: #2ab334;
@@ -219,6 +222,66 @@ display:none;
 .lead{
   width: 50%;
   word-wrap: break-word;
+}
+
+/* Steppers style */
+
+.wrapper-progressBar {
+    width: 100%
+}
+
+.progressBar {
+}
+
+.progressBar li {
+    list-style-type: none;
+    float: left;
+    width: 33%;
+    position: relative;
+    text-align: center;
+}
+
+.progressBar li:before {
+  counter-increment: section;
+    content: " " counter(section) " ";
+    line-height: 30px;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    border: 1px solid #ddd;
+    display: block;
+    text-align: center;
+    margin: 0 auto 10px;
+    background-color: white
+}
+
+.progressBar li:after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #ddd;
+    top: 15px;
+    left: -50%;
+    z-index: -1;
+}
+
+.progressBar li:first-child:after {
+    content: none;
+}
+
+.progressBar li.active {
+    color: #fff;
+
+}
+
+.progressBar li.active:before {
+    border-color: #2ab334;
+    background-color: #23930f
+}
+
+.progressBar li.active:after {
+    background-color: #23930f;
 }
 
 @media (max-width: 991px){
