--- a/css/custom.css
+++ b/css/custom.css
@@ -285,7 +285,7 @@ display:none;
 }
 #footer {
   position: absolute;
-  bottom: 0;
+  /* bottom: 0; */
   width: 100%;
 }
 @media (max-width: 991px){
