Testing Send Referral email to Admin Check01

--- a/css/custom.css
+++ b/css/custom.css
@@ -40,6 +40,7 @@ body{
   -ms-filter: blur(20px);
   z-index: -1;
 }
+.navbar{padding: 0;}
 .navbar-light .navbar-toggler{
   border-color: transparent;
 }
