--- a/css/custom.css
+++ b/css/custom.css
@@ -23,7 +23,9 @@ select.form-control[size] {
   background: #2ab334;
   border-color: #23930f;
 }
-
+.btn.btn-primary:hover, .btn.btn-primary:focus{
+  background-color: #1e6d10;
+}
 .menu-sdw
 {
   box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset !important;
