--- a/css/custom.css
+++ b/css/custom.css
@@ -2,6 +2,29 @@
 body{
   counter-reset: section;
 }
+.loader {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: url('images/loading.gif') 50% 50% no-repeat rgb(249,249,249);
+    opacity: .8;
+}
+#loading {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(192, 192, 192, 0.5);
+  background-image: url("../images/loading.gif");
+  background-repeat: no-repeat;
+  background-position: center;
+}
 .verifyMsg{
   display: none;
 }
