--- a/css/streams-project.webflow.css
+++ b/css/streams-project.webflow.css
@@ -2010,12 +2010,12 @@ width: 100%;
     padding: 0px 40px 0px 0px;
   }
 
-  .secure-img {
+  .cover-img {
     width: 100%;
     height: 100%;
-    background-image: url('../images/finger.png');
+    background-image: url('../images/cover.jpg');
     background-position: 90% 50%;
-    background-size: 300px;
+    background-size: cover;
     background-repeat: no-repeat;
   }
 
@@ -2404,7 +2404,7 @@ width: 100%;
     .slide3 {
       background-position: 100% 50%;
     }
-    .secure-img {
+    .cover-img {
       background-image: none;
     }
   }
